--- a/Formatos/AvanceCursos.html
+++ b/Formatos/AvanceCursos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Template</title>
 </head>
-<body>
+<body style="font-family: flexo">
     <p style="color: #002060;">
         Hola $NOMBRE_COMPLETO, 
     </p>
