InicioMedicion e InicioPDI listo al 99%

--- a/Formatos/AvanceCursos.html
+++ b/Formatos/AvanceCursos.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Template</title>
+    <title>Document</title>
 </head>
 <body style="font-family: flexo">
     <p style="color: #002060;">
-        Hola $NOMBRE_COMPLETO, 
+        Estimado $NOMBRE_COMPLETO,
     </p>
     <p style="color: #002060;">
-        Te escribe Ricardo del equipo de Aprendizaje de Perfil Digital donde estamos haciendo seguimiento a tu ruta de aprendizaje. <b>Como sabes, la fecha límite para culminar con tus cursos virtuales es el día 30 de enero</b> y en tu caso revisamos en el reporte de avances que <b>estas en un $S_PORCENTAJE_AVANCE</b>, así que nos podrías <b>confirmar la fecha en la cual culminarás con tus cursos virtuales faltantes</b>. 
+        Espero que esté teniendo un buen día. Quería informarle sobre el progreso que ha hecho en el programa de $PROGRAMA. Según nuestro reporte, actualmente <b>ha completado el $S_PORCENTAJE_AVANCE del programa.</b>
     </p>
     <p style="color: #002060;">
-        Nos comentas si tienes alguna duda.
+        Estamos emocionados de ver cómo está progresando y estamos seguros de que pronto podrá completar el programa. Con ese fin, me gustaría preguntarle cuál es su plan para completar el programa, <b>¿podría indicarme en qué día cree que podrá finalizarlo?</b>
     </p>
     <p style="color: #002060;">
-        ¡Gracias!
+        Si tiene alguna pregunta o inquietud, no dude en ponerse en contacto conmigo.
     </p>
-
+    <p style="color: #002060;">
+        Saludos cordiales,
+    </p>
     <h3>
-        Ricardo León Lopez
+        $TU_NOMBRE
     </h3>
     <h4>
         SQ Desarrollo y Upskilling
