--- a/Formatos/AvanceCursos.html
+++ b/Formatos/AvanceCursos.html
@@ -17,6 +17,9 @@
         Estamos emocionados de ver cómo está progresando y estamos seguros de que pronto podrá completar el programa. Con ese fin, me gustaría preguntarle cuál es su plan para completar el programa, <b>¿podría indicarme en qué día cree que podrá finalizarlo?</b>
     </p>
     <p style="color: #002060;">
+        <b>Recuerda que la fecha límite es $DIA_MES_DEADLINE</b>
+    </p>
+    <p style="color: #002060;">
         Si tiene alguna pregunta o inquietud, no dude en ponerse en contacto conmigo.
     </p>
     <p style="color: #002060;">
