Se agregaron nuevas opciones

--- a/Formatos/InicioMedicion.html
+++ b/Formatos/InicioMedicion.html
@@ -11,7 +11,10 @@
         Hola $NOMBRE_COMPLETO, 
     </p>
     <p style="color: #002060;">
-        Te escribe $TU_NOMBRE del equipo de Aprendizaje de Perfil Digital donde estamos haciendo seguimiento a tu ruta de aprendizaje del programa de $PROGRAMA. <b>Como sabes, la fecha límite para culminar con tus cursos virtuales es el día $DIA_MES_DEADLINE.</b> y en tu caso revisamos en el reporte de avances que <b>estas en un $S_PORCENTAJE_AVANCE</b>, así que nos podrías <b>confirmar la fecha en la cual culminarás con tus cursos virtuales faltantes</b>. 
+        Te escribe $TU_NOMBRE del equipo de Aprendizaje de Perfil Digital donde estamos haciendo seguimiento a tu ruta de aprendizaje del programa de $PROGRAMA. <b>Como sabes, la fecha límite para culminar con tus cursos virtuales es el día $DIA_MES_DEADLINE</b> y en tu caso revisamos en el reporte de avances que <b>estas en un $S_PORCENTAJE_AVANCE</b>, así que nos podrías <b>confirmar la fecha en la cual culminarás con tus cursos virtuales faltantes</b>. 
+    </p>
+    <p style="color: #002060;">
+        Y en caso ya hayas culminado algun curso más en esta última semana me lo haces saber por este medio para actualizar nuestro reporte.
     </p>
     <p style="color: #002060;">
         Nos comentas si tienes alguna duda.
