--- a/Formatos/AvanceCursos.html
+++ b/Formatos/AvanceCursos.html
@@ -17,10 +17,10 @@
         Estamos emocionados de ver cómo está progresando y estamos seguros de que pronto podrá completar el programa. Con ese fin, me gustaría preguntarle cuál es su plan para completar el programa, <b>¿podría indicarme en qué día cree que podrá finalizarlo?</b>
     </p>
     <p style="color: #002060;">
-        <b>Recuerda que la fecha límite es $DIA_MES_DEADLINE</b>
+        <b>Recuerda que la fecha límite fue $DIA_MES_DEADLINE</b>
     </p>
     <p style="color: #002060;">
-        Si tiene alguna pregunta o inquietud, no dude en ponerse en contacto conmigo.
+        Si tiene alguna pregunta o inquietud, no dude en ponerse en contacto conmigo. <b>Y en caso ya hayas culminado algun curso más en esta última semana me lo haces saber por este medio para actualizar nuestro reporte.</b>
     </p>
     <p style="color: #002060;">
         Saludos cordiales,
