Carpetas para cada imagen y archivo

--- a/Formatos/Refuerzo_evaluacion.html
+++ b/Formatos/Refuerzo_evaluacion.html
@@ -78,7 +78,7 @@
 
             <tr>
               <td style="padding:0px 30px 30px 30px;text-align:center;font-size:24px;font-weight:bold;background-color:#ffffff;">
-                <a style="text-decoration:none;width: 10px;"><img src="Imagenes/footer_test.png" alt="Logo" style="width:auto;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
+                <a style="text-decoration:none;width: 10px;"><img src="Imagenes/Refuerzo_evaluacion/footer_test.png" alt="Logo" style="width:auto;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
               </td>
             </tr>
 
