--- a/Formatos/capability_building.html
+++ b/Formatos/capability_building.html
@@ -39,7 +39,7 @@
           <table role="presentation" style="width:100%;max-width:60%;border:none;border-spacing:0;text-align:left;font-size:16px;line-height:22px;color:#363636;">
             <tr>
               <td style="padding:40px 30px 0px 30px;text-align:center;font-size:24px;font-weight:bold;background-color:#ffffff;">
-                <a style="text-decoration:none;width: 10px;"><img src="Imagenes/Banner_refuerzo_autoevaluación.png" alt="Logo" style="width:auto;height:10px;border:none;text-decoration:none;color:#ffffff;"></a>
+                <a style="text-decoration:none;width: 10px;"><img src="Imagenes/Capability_building/Banner_refuerzo_autoevaluación.png" alt="Logo" style="width:auto;height:10px;border:none;text-decoration:none;color:#ffffff;"></a>
               </td>
             </tr>
             <tr>
@@ -86,7 +86,7 @@
 
             <tr>
               <td style="padding:0px 30px 30px 30px;text-align:center;font-size:24px;font-weight:bold;background-color:#ffffff;">
-                <a style="text-decoration:none;width: 10px;"><img src="Imagenes/footer_test.png" alt="Logo" style="width:auto;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
+                <a style="text-decoration:none;width: 10px;"><img src="Imagenes/Capability_building/footer_test.png" alt="Logo" style="width:auto;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
               </td>
             </tr>
 
