auto y eva finalizado y por finalizar

--- a/Formatos/Refuerzo_evaluacion.html
+++ b/Formatos/Refuerzo_evaluacion.html
@@ -39,13 +39,13 @@
           <table role="presentation" style="width:100%;max-width:60%;border:none;border-spacing:0;text-align:left;font-size:16px;line-height:22px;color:#363636;">
             <tr>
               <td style="padding:40px 30px 0px 30px;text-align:center;font-size:26px;font-weight:bold;background-color:#ffffff;">
-                <h2>Evaluación de desarrollo</h2>
+                <a style="text-decoration:none;width: 10px;"><img src="Imagenes/Capability_building/Banner_evaluacion.png" alt="Logo" style="width:auto;height:10px;border:none;text-decoration:none;color:#ffffff;"></a>
               </td>
             </tr>
             <tr>
               <td style="padding:30px 30px 30px 30px;background-color:#ffffff;">
                 <b><h1 style="margin-top:0;margin-bottom:16px;font-size:18px !important;line-height:32px;font-weight:bold;letter-spacing:-0.02em; color: #6EADFF;">¡Hola $LIDER!</h1></b>
-                Queremos recordarte que aún está pendiente que finalices la evaluación en el mapa de carrera de algunos members de tu equipo. Es importante que puedas realizar esta medición ya que permitirá <em><font style="color: #404040;font-weight:bold;">identificar las brechas iniciales de cada uno y activar acciones de aprendizaje </font></em> que potencien su desarrollo.
+                Queremos recordarte que aún está pendiente que finalices la evaluación en el mapa de carrera de algunos members de tu equipo. Es importante que puedas realizar esta medición ya que te permitirá <em><font style="color: #404040;font-weight:bold;">identificar las brechas iniciales de cada uno y activar acciones de aprendizaje </font></em> que potencien su desarrollo.
               </td>
             </tr>
 
@@ -64,8 +64,14 @@
 
             <tr>
               <td style="padding:0px 30px 5px 30px;background-color:#ffffff;">
-                <a href="https://apps.powerapps.com/play/e/default-5d93ebcc-f769-4380-8b7e-289fc972da1b/a/aaba4d5b-936e-4b1b-9955-8008b1071405?tenantId=5d93ebcc-f769-4380-8b7e-289fc972da1b&source=portal"> Ingresa aquí</a> para terminarlo, recuerda que tienes <em><font style="color: #404040;font-weight:bold;">hasta el día de mañana.</font></em>
+                <a href="https://apps.powerapps.com/play/e/default-5d93ebcc-f769-4380-8b7e-289fc972da1b/a/aaba4d5b-936e-4b1b-9955-8008b1071405?tenantId=5d93ebcc-f769-4380-8b7e-289fc972da1b&source=portal"> Ingresa aquí</a> para terminarlo, recuerda que <em><font style="color: #404040;font-weight:bold;">¡tienes hasta el día de hoy!</font></em>
                 
+              </td>
+            </tr>
+
+            <tr>
+              <td style="padding:0px 30px 5px 30px;background-color:#ffffff;">
+                Para cualquier consulta, puedes contactar a <em><font style="color: #404040;font-weight:bold;">Valeria San Román <a href="mailto:valeriaroman@bcp.com.pe">valeriaroman@bcp.com.pe</a></font>
               </td>
             </tr>
 
